--- a/java/org/apache/tomcat/util/compat/LocalStrings.properties
+++ b/java/org/apache/tomcat/util/compat/LocalStrings.properties
@@ -42,4 +42,4 @@ jreCompat.noVirtualThreads=Java Runtime does not support virtual threads. You mu
 jreCompat.useCanonCaches.failed=Failed to set the java.io.FileSystem.useCanonCaches static field
 jreCompat.useCanonCaches.init=Unable to create a reference to the java.io.FileSystem.useCanonCaches static field
 jreCompat.useCanonCaches.java18=If using Java 18 to Java 20 inclusive, you must not enabled the canonical file name cache using -Dsun.io.useCanonCaches=true on the command line as Tomcat is unable to disable the cache via reflection on those Java versions
-jreCompat.useCanonCaches.none=No reference to the java.io.FileSystem.useCanonCaches static field available.
+jreCompat.useCanonCaches.none=No reference to the java.io.FileSystem.useCanonCaches static field available
