Better warning for Java 18 to 20

--- a/java/org/apache/tomcat/util/compat/LocalStrings.properties
+++ b/java/org/apache/tomcat/util/compat/LocalStrings.properties
@@ -35,4 +35,5 @@ jreCompat.noUnixDomainSocket=Java Runtime does not support Unix domain sockets. 
 jreCompat.noVirtualThreads=Java Runtime does not support virtual threads. You must use Java 21 or later to use this feature.
 jreCompat.useCanonCaches.failed=Failed to set the java.io.FileSystem.useCanonCaches static field
 jreCompat.useCanonCaches.init=Unable to create a reference to the java.io.FileSystem.useCanonCaches static field
-jreCompat.useCanonCaches.none=No reference to the java.io.FileSystem.useCanonCaches static field available. Enable debug logging for more information.
+jreCompat.useCanonCaches.java18=If using Java 18 to Java 20 inclusive, you must not enabled the canonical file name cache using -Dsun.io.useCanonCaches=true on the command line as Tomcat is unable to disable the cache via reflection on those Java versions
+jreCompat.useCanonCaches.none=No reference to the java.io.FileSystem.useCanonCaches static field available
