Better warning on Java 18 to 20

--- a/java/org/apache/tomcat/util/compat/LocalStrings.properties
+++ b/java/org/apache/tomcat/util/compat/LocalStrings.properties
@@ -22,4 +22,5 @@ jre22Compat.javaPre22=Class not found so assuming code is running on a pre-Java 
 
 jreCompat.useCanonCaches.failed=Failed to set the java.io.FileSystem.useCanonCaches static field
 jreCompat.useCanonCaches.init=Unable to create a reference to the java.io.FileSystem.useCanonCaches static field
-jreCompat.useCanonCaches.none=No reference to the java.io.FileSystem.useCanonCaches static field available. Enable debug logging for more information.
+jreCompat.useCanonCaches.java18=If using Java 18 to Java 20 inclusive, you must not enabled the canonical file name cache using -Dsun.io.useCanonCaches=true on the command line as Tomcat is unable to disable the cache via reflection on those Java versions
+jreCompat.useCanonCaches.none=No reference to the java.io.FileSystem.useCanonCaches static field available
