Make sure temporary files are deleted
The API forces catching exceptions to delete the temporary file.
Also log a warning if delete fails.

--- a/java/org/apache/catalina/servlets/LocalStrings.properties
+++ b/java/org/apache/catalina/servlets/LocalStrings.properties
@@ -40,6 +40,7 @@ cgiServlet.runStdErrFail=I/O problems with stderr
 defaultServlet.blockExternalEntity=Blocked access to external entity with publicId [{0}] and systemId [{0}]
 defaultServlet.blockExternalEntity2=Blocked access to external entity with name [{0}], publicId [{1}], baseURI [{2}] and systemId [{3}]
 defaultServlet.blockExternalSubset=Blocked access to external subset with name [{0}] and baseURI [{1}]
+defaultServlet.deleteTempFileFailed=Failed to delete temporary file [{0}] used for partial PUT
 defaultServlet.directory.parent=Up To [{0}]
 defaultServlet.directory.title=Directory Listing For [{0}]
 defaultServlet.globalXSLTTooBig=The global XSLT file [{0}] is too big to buffer
