Fix BZ 69598 - release service account token if it changes

--- a/java/org/apache/catalina/tribes/membership/cloud/LocalStrings.properties
+++ b/java/org/apache/catalina/tribes/membership/cloud/LocalStrings.properties
@@ -38,6 +38,7 @@ kubernetesMembershipProvider.jsonError=JSON error
 kubernetesMembershipProvider.memberError=Error creating member
 kubernetesMembershipProvider.noKey=Client certificate key was not specified in the environment
 kubernetesMembershipProvider.noNamespace=Namespace not set
+kubernetesMembershipProvider.serviceAccountTokenMissing=Service account token not found at [{0}]
 kubernetesMembershipProvider.streamError=Failed to open stream
 
 tokenStream.failedConnection=Failed connection to [{0}] with token [{1}]
