--- a/build.xml
+++ b/build.xml
@@ -2613,7 +2613,7 @@
     </copy>
   </target>
 
-  <target name="-installer-pre-init">
+  <target name="-installer-pre-init" unless="skip.installer">
     <property environment="env" />
     <condition property="wine.ok">
       <or>
