Fix skip.installer=true build.
ant target dependencies run even if the target body itself
is skipped via unless. So make sure that dependencies
use the same "unless".

It was removed in error during the installer target
refactoring to support makensis on non-Windows.

--- a/build.xml
+++ b/build.xml
@@ -2594,7 +2594,7 @@ Apache Tomcat ${version} native binaries for Win64 AMD64/EMT64 platform.
     </copy>
   </target>
 
-  <target name="-installer-pre-init">
+  <target name="-installer-pre-init" unless="skip.installer">
     <property environment="env" />
     <condition property="wine.ok">
       <or>
