Correct fix for skip.installer=true build.

--- a/build.xml
+++ b/build.xml
@@ -2613,7 +2613,7 @@
     </copy>
   </target>
 
-  <target name="-installer-pre-init" unless="skip.installer">
+  <target name="-installer-pre-init">
     <property environment="env" />
     <condition property="wine.ok">
       <or>
@@ -2636,6 +2636,7 @@
         <os family="windows" />
         <isset property="wine.ok"/>
         <isset property="makensis.ok"/>
+        <istrue value="${skip.installer}"/>
       </or>
     </condition>
   </target>
